--- a/Spedizioni/Spedizioni/Views/Shared/_Layout.cshtml
+++ b/Spedizioni/Spedizioni/Views/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contatti">Contatti</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contatti">Contattaci</a>
+                        </li>
+                        <li class="nav-item ms-auto">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Auth">Accedi | Registrati</a>
                         </li>
                     </ul>
                 </div>
