--- a/Spedizioni/Spedizioni/Views/Shared/_Layout.cshtml
+++ b/Spedizioni/Spedizioni/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contatti">Contattaci</a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Auth">Accedi | Registrati</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
                         </li>
                     </ul>
                 </div>
