--- a/Spedizioni/Spedizioni/Views/Account/Login.cshtml
+++ b/Spedizioni/Spedizioni/Views/Account/Login.cshtml
@@ -1,14 +1,14 @@
 ﻿@using Spedizioni.Services
 @model ApplicationUser
 
-<form asp-action="Login">
-    <label asp-for="UserName"></label>
-    <input asp-for="UserName" />
-    <br />
-    <label asp-for="Password"></label>
-    <input type="password" asp-for="Password" />
-    <button class="btn btn-primary">Login</button>
-
+<form asp-action="Login" method="post">
+    <div class="form-group">
+        <label asp-for="UserName" class="control-label"></label>
+        <input asp-for="UserName" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Password" class="control-label"></label>
+        <input type="password" asp-for="Password" class="form-control" />
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
 </form>
-
-
