--- a/Spedizioni/Spedizioni/Views/Home/Index.cshtml
+++ b/Spedizioni/Spedizioni/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using System.Security.Claims
+
+@{
     ViewData["Title"] = "Home Page";
 
 
@@ -8,6 +10,14 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome @currentUser</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <ul>
 
+        @foreach (var c in User.Claims.Where(c => c.Type == ClaimTypes.Role))
+    {
+        <li>@c.Value</li>
+    }
+
+
+    </ul>
+
+    
